# solana-aggregator

./: .gitignore  Anchor.toml  Cargo.toml  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1763464241751324  MANIFEST-000021
migrations/: deploy.ts
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
tests/: vault.ts
ts/: package.json  tsconfig.json
ts/scripts/: demo.ts
ts/tests/: vault.ts
